Add "objective":"maximize" to metrics (#127)
* add metrics field and objectives to experiment create"

* switch name from value to score

* rename value to score again

* rename value to score again

* rename metrics

* address pr review

* address pr review

* rename last values

* update readmes

* address pr review

* address pr review

* address pr review

--- a/multimetric-demo/finding_multiple_optima.ipynb
+++ b/multimetric-demo/finding_multiple_optima.ipynb
@@ -90,7 +90,7 @@
     "multimodal_first_solution_meta = {\n",
     "    'name': 'SigOpt Multimetric Demo - Single Metric Optimization (python)',\n",
     "    'project': 'sigopt-examples',\n",
-    "    'metrics': [{'name': 'value'}],\n",
+    "    'metrics': [{'name': 'multimodal_function_value', 'objective': 'maximize'}],\n",
     "    'parameters': [\n",
     "        {'name': 'x1', 'bounds': {'min': -1.0, 'max': 1.0}, 'type': 'double'},\n",
     "        {'name': 'x2', 'bounds': {'min': -1.0, 'max': 1.0}, 'type': 'double'},\n",
@@ -230,7 +230,10 @@
     "\n",
     "multimetric_second_solution_meta = {\n",
     "    'name': 'SigOpt Multimetric Demo - Search for Second Solution (python)',\n",
-    "    'metrics': [{'name': 'function value'}, {'name': 'distance from x_star'}],\n",
+    "    'metrics': [\n",
+    "        {'name': 'function value', 'objective': 'maximize'},\n",
+    "        {'name': 'distance from x_star', 'objective': 'maximize'},\n",
+    "    ],\n",
     "    'parameters': [\n",
     "        {'name': 'x1', 'bounds': {'min': -1.0, 'max': 1.0}, 'type': 'double'},\n",
     "        {'name': 'x2', 'bounds': {'min': -1.0, 'max': 1.0}, 'type': 'double'},\n",
