--- a/random-forest/python/Random Forest.ipynb
+++ b/random-forest/python/Random Forest.ipynb
@@ -67,6 +67,7 @@
     "experiment = conn.experiments().create(\n",
     "  name=\"Random Forest (iPython)\",\n",
     "  project=\"sigopt-examples\",\n",
+    "  metrics=[dict(name=\"cv_accuracies\", objective=\"maximize\")],\n",
     "  parameters=[\n",
     "    dict(name=\"max_features\", type=\"int\", bounds=dict(min=1, max=len(iris)-1)),\n",
     "    dict(name=\"n_estimators\", type=\"int\", bounds=dict(min=1, max=100)),\n",
