--- a/multimetric-demo/svm_example.ipynb
+++ b/multimetric-demo/svm_example.ipynb
@@ -178,7 +178,7 @@
     "* the average of the cross-validated scores, and\n",
     "* the average of the time required to train each of them.\n",
     "\n",
-    "We also report an estimate of the standard deviation for both of these quantities.  Note that, because we (presumably) want to minimize the training time, we will negate that value in observations.\n",
+    "We also report an estimate of the standard deviation for both of these quantities.\n",
     "\n",
     "The [parameters of interest](http://scikit-learn.org/stable/auto_examples/svm/plot_rbf_parameters.html) in this problem are\n",
     "\n",
@@ -199,7 +199,10 @@
     "svm_score_time_meta = {\n",
     "    'name': 'SigOpt Multimetric Demo - Balancing Score vs. Training Time (python)',\n",
     "    'project': 'sigopt-examples',\n",
-    "    'metrics': [{'name': 'score'}, {'name': 'training time'}],\n",
+    "    'metrics': [\n",
+    "        {'name': 'score', 'objective': 'maximize'},\n",
+    "        {'name': 'training time', 'objective': 'minimize'},\n",
+    "    ],\n",
     "    'parameters': [\n",
     "        {'name': 'log_gamma', 'bounds': {'min': numpy.log(.01), 'max': numpy.log(100)}, 'type': 'double'},\n",
     "        {'name': 'log_C', 'bounds': {'min': numpy.log(.01), 'max': numpy.log(100)}, 'type': 'double'},\n",
@@ -213,7 +216,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We create a function which will return a dictionary full of the necessary information to create an observation, given a suggestion from SigOpt.  This is not required, but it helps simplify the optimization loop.  Recall, we are negating the training time to try to minimize (not maximize) it.  Also, notice the use of `numpy.exp` to move the parameters given by SigOpt from log-scale to the appropriate domain values needed in scikit-learn.\n",
+    "We create a function which will return a dictionary full of the necessary information to create an observation, given a suggestion from SigOpt.  This is not required, but it helps simplify the optimization loop.  Also, notice the use of `numpy.exp` to move the parameters given by SigOpt from log-scale to the appropriate domain values needed in scikit-learn.\n",
     "\n",
     "We also want to report, as metadata, the error on the test data set, just to keep relevant information altogether.  In practice, it may be the case that this quantity will only be computed after the optimization is completed.\n",
     "\n",
@@ -260,7 +263,7 @@
     "            },\n",
     "            {\n",
     "                'name': 'training time',\n",
-    "                'value': -numpy.mean(all_training_times),\n",
+    "                'value': numpy.mean(all_training_times),\n",
     "                'value_stddev': numpy.sqrt(numpy.var(all_training_times) / num_folds)\n",
     "            },\n",
     "        ],\n",
@@ -370,7 +373,7 @@
     "ax1.plot(all_values[:, 0], all_values[:, 1], **dominated_opts)\n",
     "ax1.plot(efficient_values[:, 0], efficient_values[:, 1], **efficient_opts)\n",
     "ax1.set_xlabel('average training score', fontsize=15)\n",
-    "ax1.set_ylabel('average training time (negative)', fontsize=15)\n",
+    "ax1.set_ylabel('average training time', fontsize=15)\n",
     "\n",
     "ax2.plot(all_points[:, 0], all_points[:, 1], **dominated_opts)\n",
     "ax2.plot(efficient_points[:, 0], efficient_points[:, 1], **efficient_opts)\n",
@@ -410,7 +413,7 @@
     "plt.plot(efficient_values[:, 0], efficient_values[:, 1], **efficient_opts)\n",
     "plt.title('efficient frontier (zoomed)', fontsize=15)\n",
     "plt.xlabel('average training score', fontsize=15)\n",
-    "plt.ylabel('average training time (negative)', fontsize=15)\n",
+    "plt.ylabel('average training time', fontsize=15)\n",
     "plt.xlim((.85, .87))\n",
     "plt.ylim((-5, -2));"
    ]
