--- a/random-forest/python/Random Forest.ipynb
+++ b/random-forest/python/Random Forest.ipynb
@@ -58,18 +58,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Created experiment: https://sigopt.com/experiment/118615\n"
+     ]
+    }
+   ],
    "source": [
     "experiment = conn.experiments().create(\n",
     "  name=\"Random Forest (iPython)\",\n",
     "  project=\"sigopt-examples\",\n",
     "  metrics=[dict(name=\"cv_accuracies\", objective=\"maximize\")],\n",
     "  parameters=[\n",
-    "    dict(name=\"max_features\", type=\"int\", bounds=dict(min=1, max=len(iris)-1)),\n",
+    "    dict(name=\"max_features\", type=\"int\", bounds=dict(min=1, max=X.shape[1])),\n",
     "    dict(name=\"n_estimators\", type=\"int\", bounds=dict(min=1, max=100)),\n",
     "    dict(name=\"min_samples_leaf\", type=\"int\", bounds=dict(min=1, max=10))\n",
     "  ]\n",
@@ -88,27 +94,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn import cross_validation\n",
+    "from sklearn.model_selection import cross_val_score\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "import numpy\n",
     "\n",
     "def evaluate_model(assignments, X, y):\n",
-    "  cv = cross_validation.ShuffleSplit(\n",
-    "    X.shape[0],\n",
-    "    n_iter=5,\n",
-    "    test_size=0.3,\n",
-    "  )\n",
     "  classifier = RandomForestClassifier(\n",
     "    n_estimators=assignments['n_estimators'],\n",
     "    max_features=assignments['max_features'],\n",
     "    min_samples_leaf=assignments['min_samples_leaf']\n",
     "  )\n",
-    "  cv_accuracies = cross_validation.cross_val_score(classifier, X, y, cv=cv)\n",
+    "  cv_accuracies = cross_val_score(classifier, X, y, cv=5)\n",
     "  return (numpy.mean(cv_accuracies), numpy.std(cv_accuracies))"
    ]
   },
@@ -160,6 +159,7 @@
    "source": [
     "# Re-fetch the best observed value and assignments\n",
     "best_assignments = conn.experiments(experiment.id).best_assignments().fetch().data[0].assignments\n",
+    "print(best_assignments)\n",
     "\n",
     "# To wrap up the Experiment, fit the RandomForest on the best assignments\n",
     "# and train on all available data\n",
@@ -174,23 +174,23 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
