--- a/random-forest/python/Random Forest.ipynb
+++ b/random-forest/python/Random Forest.ipynb
@@ -71,9 +71,21 @@
    ],
    "source": [
     "experiment = conn.experiments().create(\n",
-    "  name=\"Random Forest (iPython)\",\n",
+    "  name=\"Random Forest - Metric Storage (iPython)\",\n",
     "  project=\"sigopt-examples\",\n",
-    "  metrics=[dict(name=\"cv_accuracies\", objective=\"maximize\")],\n",
+    "  metrics=[\n",
+    "      {\"name\": \"test_score\", \n",
+    "       \"objective\": \"maximize\",\n",
+    "       \"strategy\": \"optimize\"},\n",
+    "      {\"name\": \"train_score\",\n",
+    "       \"objective\": \"maximize\",\n",
+    "       \"strategy\": \"store\"},\n",
+    "      {\"name\": \"fit_time\",\n",
+    "       \"objective\": \"maximize\",\n",
+    "       \"strategy\": \"store\"},\n",
+    "      {\"name\": \"score_time\",\n",
+    "       \"objective\": \"maximize\",\n",
+    "       \"strategy\": \"store\"}],\n",
     "  parameters=[\n",
     "    dict(name=\"max_features\", type=\"int\", bounds=dict(min=1, max=X.shape[1])),\n",
     "    dict(name=\"n_estimators\", type=\"int\", bounds=dict(min=1, max=100)),\n",
@@ -93,11 +105,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.model_selection import cross_validate\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "import numpy\n",
     "\n",
@@ -107,8 +119,7 @@
     "    max_features=assignments['max_features'],\n",
     "    min_samples_leaf=assignments['min_samples_leaf']\n",
     "  )\n",
-    "  cv_accuracies = cross_val_score(classifier, X, y, cv=5)\n",
-    "  return (numpy.mean(cv_accuracies), numpy.std(cv_accuracies))"
+    "  return cross_validate(classifier, X, y, cv=5, return_train_score=True)"
    ]
   },
   {
@@ -132,13 +143,18 @@
     "    suggestion = conn.experiments(experiment.id).suggestions().create()\n",
     "\n",
     "    # Evaluate the model locally\n",
-    "    (value, std) = evaluate_model(suggestion.assignments, X, y)\n",
+    "    results = evaluate_model(suggestion.assignments, X, y)\n",
     "\n",
     "    # Report an Observation (with standard deviation) back to SigOpt\n",
     "    conn.experiments(experiment.id).observations().create(\n",
     "        suggestion=suggestion.id,\n",
-    "        value=value,\n",
-    "        value_stddev=std,\n",
+    "        values=[\n",
+    "            {\"name\": name,\n",
+    "             \"value\": results[name].mean(),\n",
+    "             \"value_stddev\": results[name].std()\n",
+    "            }\n",
+    "            for name in [\"test_score\", \"train_score\", \"fit_time\", \"score_time\"]\n",
+    "        ]\n",
     "    )"
    ]
   },
