--- a/random-forest/python/Random Forest.ipynb
+++ b/random-forest/python/Random Forest.ipynb
@@ -58,17 +58,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Created experiment: https://sigopt.com/experiment/118615\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
    "source": [
     "experiment = conn.experiments().create(\n",
     "  name=\"Random Forest (iPython)\",\n",
@@ -94,7 +88,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.model_selection import cross_val_score\n",
