--- a/random-forest/python/Random Forest.ipynb
+++ b/random-forest/python/Random Forest.ipynb
@@ -58,36 +58,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Created experiment: https://sigopt.com/experiment/118615\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
    "source": [
     "experiment = conn.experiments().create(\n",
-    "  name=\"Random Forest - Metric Storage (iPython)\",\n",
+    "  name=\"Random Forest (iPython)\",\n",
     "  project=\"sigopt-examples\",\n",
-    "  metrics=[\n",
-    "      {\"name\": \"test_score\", \n",
-    "       \"objective\": \"maximize\",\n",
-    "       \"strategy\": \"optimize\"},\n",
-    "      {\"name\": \"train_score\",\n",
-    "       \"objective\": \"maximize\",\n",
-    "       \"strategy\": \"store\"},\n",
-    "      {\"name\": \"fit_time\",\n",
-    "       \"objective\": \"maximize\",\n",
-    "       \"strategy\": \"store\"},\n",
-    "      {\"name\": \"score_time\",\n",
-    "       \"objective\": \"maximize\",\n",
-    "       \"strategy\": \"store\"}],\n",
+    "  metrics=[dict(name=\"cv_accuracies\", objective=\"maximize\")],\n",
     "  parameters=[\n",
-    "    dict(name=\"max_features\", type=\"int\", bounds=dict(min=1, max=X.shape[1])),\n",
+    "    dict(name=\"max_features\", type=\"int\", bounds=dict(min=1, max=len(iris)-1)),\n",
     "    dict(name=\"n_estimators\", type=\"int\", bounds=dict(min=1, max=100)),\n",
     "    dict(name=\"min_samples_leaf\", type=\"int\", bounds=dict(min=1, max=10))\n",
     "  ]\n",
@@ -105,21 +87,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import cross_validate\n",
+    "from sklearn import cross_validation\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "import numpy\n",
     "\n",
     "def evaluate_model(assignments, X, y):\n",
+    "  cv = cross_validation.ShuffleSplit(\n",
+    "    X.shape[0],\n",
+    "    n_iter=5,\n",
+    "    test_size=0.3,\n",
+    "  )\n",
     "  classifier = RandomForestClassifier(\n",
     "    n_estimators=assignments['n_estimators'],\n",
     "    max_features=assignments['max_features'],\n",
     "    min_samples_leaf=assignments['min_samples_leaf']\n",
     "  )\n",
-    "  return cross_validate(classifier, X, y, cv=5, return_train_score=True)"
+    "  cv_accuracies = cross_validation.cross_val_score(classifier, X, y, cv=cv)\n",
+    "  return (numpy.mean(cv_accuracies), numpy.std(cv_accuracies))"
    ]
   },
   {
@@ -143,18 +133,13 @@
     "    suggestion = conn.experiments(experiment.id).suggestions().create()\n",
     "\n",
     "    # Evaluate the model locally\n",
-    "    results = evaluate_model(suggestion.assignments, X, y)\n",
+    "    (value, std) = evaluate_model(suggestion.assignments, X, y)\n",
     "\n",
     "    # Report an Observation (with standard deviation) back to SigOpt\n",
     "    conn.experiments(experiment.id).observations().create(\n",
     "        suggestion=suggestion.id,\n",
-    "        values=[\n",
-    "            {\"name\": name,\n",
-    "             \"value\": results[name].mean(),\n",
-    "             \"value_stddev\": results[name].std()\n",
-    "            }\n",
-    "            for name in [\"test_score\", \"train_score\", \"fit_time\", \"score_time\"]\n",
-    "        ]\n",
+    "        value=value,\n",
+    "        value_stddev=std,\n",
     "    )"
    ]
   },
@@ -175,7 +160,6 @@
    "source": [
     "# Re-fetch the best observed value and assignments\n",
     "best_assignments = conn.experiments(experiment.id).best_assignments().fetch().data[0].assignments\n",
-    "print(best_assignments)\n",
     "\n",
     "# To wrap up the Experiment, fit the RandomForest on the best assignments\n",
     "# and train on all available data\n",
@@ -190,23 +174,23 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 0
 }
