remove key and output

--- a/random-forest/python/Random Forest Metric Storage.ipynb
+++ b/random-forest/python/Random Forest Metric Storage.ipynb
@@ -16,12 +16,14 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sigopt import Connection\n",
-    "conn = Connection(client_token=\"CVGNZPJDNWMDUOHFQBYNSIPCENBBJISRROWEXSGCDNIWDWFF\")"
+    "conn = Connection(client_token=SIGOPT_API_TOKEN)"
    ]
   },
   {
@@ -34,8 +36,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from sklearn import datasets\n",
@@ -54,17 +58,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Created experiment: https://sigopt.com/experiment/118778\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
    "source": [
     "experiment = conn.experiments().create(\n",
     "  name=\"Random Forest - Metric Storage MultiMetric (iPython)\",\n",
@@ -103,8 +101,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.model_selection import cross_validate\n",
@@ -130,8 +130,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "for _ in range(150):\n",
@@ -163,37 +165,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Assignments({\n",
-      "  \"max_features\": 1,\n",
-      "  \"min_samples_leaf\": 2,\n",
-      "  \"n_estimators\": 1\n",
-      "})\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "RandomForestClassifier(bootstrap=True, class_weight=None, criterion='gini',\n",
-       "                       max_depth=None, max_features=1, max_leaf_nodes=None,\n",
-       "                       min_impurity_decrease=0.0, min_impurity_split=None,\n",
-       "                       min_samples_leaf=2, min_samples_split=2,\n",
-       "                       min_weight_fraction_leaf=0.0, n_estimators=1,\n",
-       "                       n_jobs=None, oob_score=False, random_state=None,\n",
-       "                       verbose=0, warm_start=False)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
    "source": [
     "# Re-fetch the best observed value and assignments\n",
     "best_assignments = conn.experiments(experiment.id).best_assignments().fetch().data[0].assignments\n",
@@ -208,13 +184,6 @@
     ")\n",
     "rf.fit(X, y)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
