--- a/xgboost-py-classifier/xgboost_py_classifier.ipynb
+++ b/xgboost-py-classifier/xgboost_py_classifier.ipynb
@@ -57,8 +57,8 @@
         "\n",
         "import xgboost as xgb\n",
         "\n",
-        "import warnings  # `do not disturbe` mode\n",
-        "warnings.filterwarnings(\"ignore\")"
+        "import warnings\n",
+        "warnings.filterwarnings(\"ignore\")  # don't spam the notebook with warnings\n"
       ],
       "execution_count": null,
       "outputs": []
