Fixes and updates github and colab links

--- a/xgboost-py-regression/xgboost_py_regressor.ipynb
+++ b/xgboost-py-regression/xgboost_py_regressor.ipynb
@@ -7,7 +7,7 @@
     "id": "view-in-github"
    },
    "source": [
-    "<a href=\"https://colab.research.google.com/github/sigopt/sigopt-examples/blob/master/xgboost_py_regressor.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+    "<a href=\"https://colab.research.google.com/github/sigopt/sigopt-examples/blob/master/xgboost-py-regression/xgboost_py_regressor.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
    ]
   },
   {
@@ -548,10 +548,17 @@
     "* `learning_rate` controls the weighting of new trees added to the model. Lowering this value will prevent overfitting, but require the model to add a larger number of tree\n",
     "\n",
     "## Wrapping up:\n",
-    "Today we explored regression on an example dataset, but you can also apply these techniques to predict all kinds of numerical outcomes based on historical training data. You can easily discover for yourself how SigOpt facilitates a robust, efficient, and well-tracked experimentation process. Aside from ease-of-use, SigOpt delivers much better optimization performance, when compared with human-tuned parameters or an exhaustive approach like grid search. If you’d like, you can find the original iPython Jupyter Notebook code for this example here, or you can run it on Colab here. \n",
+    "Today we explored regression on an example dataset, but you can also apply these techniques to predict all kinds of numerical outcomes based on historical training data. You can easily discover for yourself how SigOpt facilitates a robust, efficient, and well-tracked experimentation process. Aside from ease-of-use, SigOpt delivers much better optimization performance, when compared with human-tuned parameters or an exhaustive approach like grid search. If you’d like, [you can find the original iPython Jupyter Notebook code for this example here](https://github.com/sigopt/sigopt-examples/blob/master/xgboost-py-regression/xgboost_py_regressor.ipynb), or you can [run it on Colab here](https://colab.research.google.com/github/sigopt/sigopt-examples/blob/master/xgboost-py-regression/xgboost_py_regressor.ipynb). \n",
     "\n",
     "If you'd like to head back to the previous post, covering [classification](https://sigopt.com/blog/xgboost-classification-optimization/) instead of regression, [you can find that here](https://sigopt.com/blog/xgboost-classification-optimization/)."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
