Restores "Open in Colab" button

--- a/xgboost-py-classifier/xgboost_py_classifier.ipynb
+++ b/xgboost-py-classifier/xgboost_py_classifier.ipynb
@@ -16,6 +16,16 @@
   },
   "cells": [
     {
+     "cell_type": "markdown",
+     "metadata": {
+      "colab_type": "text",
+      "id": "view-in-github"
+     },
+     "source": [
+      "<a href=\"https://colab.research.google.com/github/sigopt/sigopt-examples/blob/master/xgboost-py-classifier/xgboost_py_classifier.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+     ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "PFd3ULbeyZZp"
