Fixes render methodology to work on GitHub as well as Colab and VS Code

--- a/vision-nas-search-keras-cifar-ray/mininas.ipynb
+++ b/vision-nas-search-keras-cifar-ray/mininas.ipynb
@@ -306,8 +306,8 @@
   },
   {
    "source": [
-    "![SigOpt Sign-Up](signup_screen.png)\n",
-    "![Your API Key](apikey.png)"
+    "![SigOpt Sign-Up](https://sigopt.com/wp-content/uploads/2021/05/signup_screen.png)\n",
+    "![Your API Key](https://sigopt.com/wp-content/uploads/2021/05/apikey.png)"
    ],
    "cell_type": "markdown",
    "metadata": {}
