Updates Colab links to latest

--- a/vision-nas-search-keras-cifar-ray/mininas.ipynb
+++ b/vision-nas-search-keras-cifar-ray/mininas.ipynb
@@ -7,7 +7,7 @@
     "id": "view-in-github"
    },
    "source": [
-    "<a href=\"https://colab.research.google.com/github/ellick-chan/raytune-tests/blob/master/mininas.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+    "<a href=\"https://colab.research.google.com/github/sigopt/sigopt-examples/blob/master/vision-nas-search-keras-cifar-ray/mininas.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
    ]
   },
   {
@@ -489,7 +489,7 @@
   },
   {
    "source": [
-    "Feel free to try this notebook out for yourself on Google Colab or Intel's own DevCloud. Be sure to sign up for free access to SigOpt, and start optimizing, tracking, and systematizing today."
+    "Feel free to [try this notebook out for yourself on Google Colab](https://colab.research.google.com/github/sigopt/sigopt-examples/blob/master/vision-nas-search-keras-cifar-ray/mininas.ipynb) or Intel's own [DevCloud](https://software.intel.com/content/www/us/en/develop/tools/devcloud.html). Be sure to sign up for free access to SigOpt, and start optimizing, tracking, and systematizing today."
    ],
    "cell_type": "markdown",
    "metadata": {
@@ -497,11 +497,11 @@
    }
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<a href=\"https://colab.research.google.com/github/sigopt/sigopt-examples/blob/master/vision-nas-search-keras-cifar-ray/mininas.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   }
  ],
  "metadata": {
@@ -514,9 +514,8 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Tensorflow (AI kit)",
-   "language": "python",
-   "name": "c009-intel_distribution_of_python_3_oneapi-beta05-tf"
+   "name": "python392jvsc74a57bd0f372476770e59caf9f6716237107194f4112c515a6d1d4610e0b7bf397340878",
+   "display_name": "Python 3.9.2 64-bit ('xgb': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -528,7 +527,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
