Update billions typo in notebook

--- a/vision-nas-search-keras-cifar-ray/mininas.ipynb
+++ b/vision-nas-search-keras-cifar-ray/mininas.ipynb
@@ -216,11 +216,11 @@
    },
    "source": [
     "## Apply Ray Tune\n",
-    "Ray Tune is a Python library that facilitates scaled experimentation, as well as hyperparameter optimization via SigOpt that allows multiple worker nodes to explore the search space in parallel. A naive grid search of our defined parameter space would explore nearly 12 billion possible configurations. In this article, we show how to use random search to speed up this process, and follow up with a smarter guided search using SigOpt, effectively comparing the performance and output of the two approaches.\n",
+    "Ray Tune is a Python library that facilitates scaled experimentation, as well as hyperparameter optimization via SigOpt that allows multiple worker nodes to explore the search space in parallel. A naive grid search of our defined parameter space would explore nearly 1.2 billion possible configurations. In this article, we show how to use random search to speed up this process, and follow up with a smarter guided search using SigOpt, effectively comparing the performance and output of the two approaches.\n",
     "\n",
     "For Ray Tune, the most important inputs are the function to optimize (train) and the search space for the parameters (config). We defined both of these earlier and provide the corresponding code below. Other options include a choice of search algorithm and scheduler for more guided searches.\n",
     "\n",
-    "Note: ~12 billion is derived from (100*20*(64-16)*3*3*(64-16)*3*(64-16)*2)"
+    "Note: A rounded 1.2 billion is derived from (100*20*(64-16)*3*3*(64-16)*3*(64-16)*2)"
    ]
   },
   {
