Fixes math formatting

--- a/vision-nas-search-keras-cifar-ray/mininas.ipynb
+++ b/vision-nas-search-keras-cifar-ray/mininas.ipynb
@@ -220,7 +220,7 @@
     "\n",
     "For Ray Tune, the most important inputs are the function to optimize (train) and the search space for the parameters (config). We defined both of these earlier and provide the corresponding code below. Other options include a choice of search algorithm and scheduler for more guided searches.\n",
     "\n",
-    "Note: A rounded 1.2 billion is derived from (100*20*(64-16)*3*3*(64-16)*3*(64-16)*2)"
+    "Note: A rounded 1.2 billion is derived from ```10*20*(64-16)*3*3*(64-16)*3*(64-16)*2```"
    ]
   },
   {
