Updates devcloud and sigopt signup links

--- a/vision-nas-search-keras-cifar-ray/mininas.ipynb
+++ b/vision-nas-search-keras-cifar-ray/mininas.ipynb
@@ -489,7 +489,7 @@
   },
   {
    "source": [
-    "Feel free to [try this notebook out for yourself on Google Colab](https://colab.research.google.com/github/sigopt/sigopt-examples/blob/master/vision-nas-search-keras-cifar-ray/mininas.ipynb) or Intel's own [DevCloud](https://software.intel.com/content/www/us/en/develop/tools/devcloud.html). Be sure to sign up for free access to SigOpt, and start optimizing, tracking, and systematizing today."
+    "Feel free to [try this notebook out for yourself on Google Colab](https://colab.research.google.com/github/sigopt/sigopt-examples/blob/master/vision-nas-search-keras-cifar-ray/mininas.ipynb) or Intel's own [DevCloud](https://devcloud.intel.com/oneapi). Be sure to [sign up for free access to SigOpt](https://app.sigopt.com/signup), and start optimizing, tracking, and systematizing today."
    ],
    "cell_type": "markdown",
    "metadata": {
