--- a/get-started/SigOpt_Experiment_And_Optimization_Demo.ipynb
+++ b/get-started/SigOpt_Experiment_And_Optimization_Demo.ipynb
@@ -68,7 +68,7 @@
         "\n",
         "If you don't have an account yet, sign up for a free at [app.sigopt.com/signup](https://app.sigopt.com/signup).\n",
         "\n",
-        "<img src=\"https://media.giphy.com/media/qTLPiuNaCfcky1mLy1/giphy.gif\" width=\"900\"/>\n"
+        "<img src=\"https://public.sigopt.com/get-started-notebooks/v1/find-api-token.gif\" width=\"900\"/>\n"
       ]
     },
     {
@@ -367,13 +367,13 @@
         "\n",
         "You can click on any of the run links above and view your completed run in our web application. Here's a view of a training run page:\n",
         "\n",
-        "<img src=\"https://media.giphy.com/media/dofe86JH6nbPVbJyzy/giphy.gif\" width=\"600\"/>\n",
+        "<img src=\"https://public.sigopt.com/get-started-notebooks/v1/view-run-page.gif\" width=\"600\"/>\n",
         "\n",
         "The charts on the training run page show how it compares on key metrics with other runs in the same project.\n",
         "\n",
         "From the Run page, click on the Project Name at the top of the page to navigate to your project. At the project level, you can compare training runs, sort and filter through your training runs and view useful charts to gain insight into everything you've tried.\n",
         "\n",
-        "<img src=\"https://media.giphy.com/media/GY3CyrLTecBD9oCtce/giphy.gif\" width=\"600\"/>\n",
+        "<img src=\"https://public.sigopt.com/get-started-notebooks/v1/sort-runs-in-project.gif\" width=\"600\"/>\n",
         "\n",
         "From the Project page, click on the Experiments tab, and click on the experiment you just created. The experiment Summary page features the experiment best value and shows experiment improvement in a grapth that plots the best observed model metric throughout the course of your experiment.\n",
         "\n",
