Updates to Get Started.

--- a/get-started/sigopt_runs_demo.ipynb
+++ b/get-started/sigopt_runs_demo.ipynb
@@ -3,7 +3,7 @@
  "nbformat_minor": 0,
  "metadata": {
   "colab": {
-   "name": "sigopt_training_runs_demo.ipynb",
+   "name": "sigopt_runs_demo.ipynb",
    "provenance": [],
    "collapsed_sections": []
   },
@@ -22,15 +22,15 @@
     "id": "AFJgv_3P4Bkl"
    },
    "source": [
-    "#SigOpt Training Runs Demo\n",
+    "#SigOpt Runs Demo\n",
     "\n",
-    "In this notebook demo, you will learn how to:\n",
+    "In this notebook, you will learn how to:\n",
     "\n",
     "* Install the SigOpt python client\n",
     "* Set your SigOpt API token\n",
     "* Create your first project\n",
     "* Instrument your model\n",
-    "* Create your first run and log your model metric and parameters to SigOpt\n",
+    "* Create your first Run and log your model metric and parameters to SigOpt\n",
     "* Visualize Results"
    ]
   },
@@ -49,7 +49,7 @@
     "id": "GStrnIw7S_ra"
    },
    "source": [
-    "! pip install sigopt"
+    "!pip install sigopt"
    ],
    "execution_count": null,
    "outputs": []
@@ -64,68 +64,23 @@
     "\n",
     "Once you've installed SigOpt, you need to add your SigOpt API token.\n",
     "\n",
-    "If you don't have an account yet, sign up for a free at [app.sigopt.com/signup](https://app.sigopt.com/signup).\n",
+    "If you don't have an account yet, sign up for a free account at [app.sigopt.com/signup](https://app.sigopt.com/signup).\n",
     "\n",
     "To get your API token, visit https://app.sigopt.com/tokens/info. This page is accessible from anywhere in the app when you click on your name in the top right corner, and select \"API Tokens\".\n",
     "\n",
     "<img src=\"https://public.sigopt.com/get-started-notebooks/v1/find-api-token.gif\" width=\"900\"/>\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "metadata": {
-    "id": "4TA9RJm4UFPu"
-   },
-   "source": [
-    "MY_API_TOKEN = \"YOUR_API_TOKEN_HERE\""
-   ],
-   "execution_count": null,
-   "outputs": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "NoP3Axs_7x-K"
-   },
-   "source": [
-    "Then configure your connection with SigOpt:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "metadata": {
-    "id": "kByBIJOlUeti"
-   },
-   "source": [
-    "from sigopt import Connection\n",
-    "conn = Connection(client_token=MY_API_TOKEN)"
-   ],
-   "execution_count": null,
-   "outputs": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "YEEu1lImVGDD"
-   },
-   "source": [
-    "## Create Your Project\n",
     "\n",
-    "Training runs are created within projects. The project allows you to sort and filter your training runs and view useful charts with insights into everything you've tried.\n",
-    "\n",
-    "Feel free to edit the name of your project below. Note that the API token is also set as an environment variable."
+    "Once you have your API token, run the code cell below to authenticate, configure SigOpt and load the notebook integration.\n"
    ]
   },
   {
    "cell_type": "code",
    "metadata": {
-    "id": "uB2-tngFVOjB"
+    "id": "LiRlxr9NiGsZ"
    },
    "source": [
-    "import os\n",
-    "os.environ['SIGOPT_API_TOKEN'] = MY_API_TOKEN\n",
-    "os.environ['SIGOPT_PROJECT'] = \"SigOpt_Run_XGB_Classifier\"\n",
+    "!sigopt config\n",
+    "import sigopt\n",
     "%load_ext sigopt"
    ],
    "execution_count": null,
@@ -154,7 +109,6 @@
     "from sklearn.preprocessing import OneHotEncoder, StandardScaler\n",
     "from sklearn import datasets\n",
     "import numpy\n",
-    "import sigopt\n",
     "import time"
    ],
    "execution_count": null,
@@ -163,7 +117,10 @@
   {
    "cell_type": "code",
    "metadata": {
-    "id": "AAB9zZWtWFH3"
+    "id": "AAB9zZWtWFH3",
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "source": [
     "DATASET_NAME = \"Sklearn Wine\"\n",
@@ -196,7 +153,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "81yDzXfShoZ_"
+    "id": "81yDzXfShoZ_",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "We now create our model function; `evaluate_xgboost_model` that instantiates one xgboost classifier per class in our 3-class dataset, and evaluate the one-vs-rest classifier set on `number_of_cross_val_folds` before reporting the mean score and the wall-clock time to instantiate and train the models.\n"
@@ -205,7 +165,10 @@
   {
    "cell_type": "code",
    "metadata": {
-    "id": "n-slS09RhACg"
+    "id": "n-slS09RhACg",
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "source": [
     "MODEL_NAME = \"OneVsRestClassifier(XGBoostClassifier)\"\n",
@@ -235,13 +198,16 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "nxk4TmsgFHwq"
+    "id": "nxk4TmsgFHwq",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "The second function `run_and_track_in_sigopt` uses SigOpt methods to log and track key model information including:\n",
     "* the type of model used (`sigopt.log_model`),\n",
     "* the name of the dataset (`sigopt.log_dataset`),\n",
-    "* the hyperparameters used to build the model (`sigopt.get_parameter`),\n",
+    "* the hyperparameters used to build the model (`sigopt.params.[PARAMETER_NAME]`),\n",
     "* various attributes relevant to the model (`sigopt.log_metadata`) and\n",
     "* the model output metrics (`sigopt.log_metric`)."
    ]
@@ -263,11 +229,15 @@
     "    sigopt.log_metadata(key=\"Dataset Columns\", value=features.shape[1])\n",
     "    sigopt.log_metadata(key=\"Execution Environment\", value=\"Colab Notebook\")\n",
     "    sigopt.log_model(MODEL_NAME)\n",
+    "    sigopt.params.max_depth = numpy.random.randint(low=3, high=15, dtype=int)\n",
+    "    sigopt.params.learning_rate = numpy.random.random(size=1)[0]\n",
+    "    sigopt.params.min_split_loss = numpy.random.random(size=1)[0]*10\n",
     "\n",
-    "    args = dict(X=features, y=labels,\n",
-    "                max_depth = sigopt.get_parameter(\"max_depth\", default = numpy.random.randint(low=3, high=15, dtype=int)),\n",
-    "                learning_rate = sigopt.get_parameter(\"learning_rate\", default = numpy.random.random(size=1)[0]),\n",
-    "                min_split_loss = sigopt.get_parameter(\"min_split_loss\", default = numpy.random.random(size=1)[0]*10))\n",
+    "    args = dict(X=features,\n",
+    "                y=labels,\n",
+    "                max_depth=sigopt.params.max_depth,\n",
+    "                learning_rate=sigopt.params.learning_rate,\n",
+    "                min_split_loss=sigopt.params.min_split_loss)\n",
     "\n",
     "    mean_accuracy, training_and_validation_time = evaluate_xgboost_model(**args)\n",
     "\n",
@@ -284,7 +254,7 @@
    },
    "source": [
     "## Execute SigOpt Runs\n",
-    "Let's run and track our model using the `%%run` magic command."
+    "A SigOpt Run stores a model’s attributes, training checkpoints, and evaluated metrics, so that you can see a history of your work. This is the fundamental building block of SigOpt. Let's run and track our model using the `%%run` magic command."
    ]
   },
   {
@@ -306,25 +276,25 @@
    },
    "source": [
     "## Visualize Results\n",
-    "When a run is executed, SigOpt will conveniently output links to the run page on our web application. You can click on the run link above and view your completed run in our web application. Here's a view of a training run page:\n",
+    "When a Run is executed, SigOpt will conveniently output links to the Run page on our web application. Runs record everything you might need to understand how a model was built, reconstitute the model in the future, or explain the process to a colleague. You can click on the Run link above and view your completed Run in our web application. Here's a view of a Run page:\n",
     "\n",
     "<img src=\"https://public.sigopt.com/get-started-notebooks/v1/view-run-page.gif\" width=\"900\"/>\n",
     "\n",
-    "The charts on the training run page show how it compares on key metrics with other runs in the same experiment.\n",
+    "The charts on the Run page show how it compares on key metrics with other Runs in the same Experiment.\n",
     "\n",
-    "From the Run page, click on the Project Name at the top of the page to navigate to your project. At the project level, you can compare  training runs, sort and filter through your training runs and view useful charts to gain insight into everything you've tried.\n",
+    "From the Run page, click on the Project Name at the top of the page to navigate to your project. At the project level, you can compare Runs, sort and filter through your Runs and view useful charts to gain insight into everything you've tried.\n",
     "\n",
-    "Here's a view of a project page with multiple runs:\n",
+    "Here's a view of a project page with multiple Runs:\n",
     "\n",
     "<img src=\"https://public.sigopt.com/get-started-notebooks/v1/sort-runs-in-project.gif\" width=\"900\"/>\n",
     "\n",
     "From the Project page, click on the Analysis tab. The default visualizations can be configured and more plots added, so you can draw conclusions and make comparisons.\n",
     "\n",
-    "Here's a view of the analysis dashboard with multiple runs:\n",
+    "Here's a view of the analysis dashboard with multiple Runs:\n",
     "\n",
     "<img src=\"https://public.sigopt.com/get-started-notebooks/v1/analyze-runs-in-project.gif\" width=\"900\"/>\n",
     "\n",
-    "Scroll down to the bottom of the page to see a list of all your runs in one unique table. You can sort and filter runs to identify the most promising runs, customize the table and save in a “View” for later. Filtering from the table of runs can be applied to charts to focus on runs of interest.\n",
+    "Scroll down to the bottom of the page to see a list of all your Runs in one unique table. You can sort and filter Runs to identify the most promising Runs, customize the table and save in a “View” for later. Filtering from the table of Runs can be applied to charts to focus on Runs of interest.\n",
     "\n",
     "<img src=\"https://public.sigopt.com/get-started-notebooks/v1/filter-project-runs.gif\" width=\"900\"/>"
    ]
@@ -332,12 +302,15 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "Pd67ldz8vTYA"
+    "id": "Pd67ldz8vTYA",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
-    "## From Training Runs To Optimization Experiments\n",
+    "## From Runs To Experiments\n",
     "\n",
-    "In this demo we've covered the recommended way to instrument your training run with SigOpt. After your model has been instrumented, it is easy to take advantage of SigOpt's optimization features. Optimization helps find the parameters for your model that give you the best metric (eg. maximizing an accuracy metric). Check out this ([notebook](https://colab.research.google.com/github/sigopt/sigopt-examples/blob/master/get-started/sigopt_experiment_and_optimization_demo.ipynb/)) to see how you can create an experiment!"
+    "In this demo we've covered the recommended way to instrument your Run with SigOpt. After your model has been instrumented, it is easy to take advantage of SigOpt's optimization features. Optimization helps find the parameters for your model that give you the best metric (eg. maximizing an accuracy metric). Check out this ([notebook](https://colab.research.google.com/github/sigopt/sigopt-examples/blob/master/get-started/sigopt_experiment_and_optimization_demo.ipynb/)) to see how you can create an Experiment!"
    ]
   }
  ]
