--- a/get-started/sigopt_experiment_and_optimization_demo.ipynb
+++ b/get-started/sigopt_experiment_and_optimization_demo.ipynb
@@ -3,7 +3,7 @@
  "nbformat_minor": 0,
  "metadata": {
   "colab": {
-   "name": "SigOpt_Experiment_And_Optimization_Demo.ipynb",
+   "name": "sigopt_experiment_and_optimization_demo.ipynb",
    "provenance": [],
    "collapsed_sections": []
   },
@@ -24,13 +24,13 @@
    "source": [
     "#SigOpt Experiment And Optimization Demo\n",
     "\n",
-    "In this tutorial, you will learn how to:\n",
+    "In this notebook, you will learn how to:\n",
     "\n",
     "* Install the SigOpt python client\n",
     "* Set your SigOpt API token\n",
     "* Create your first project\n",
     "* Instrument your model\n",
-    "* Create your first experiment and optimize your model metric with SigOpt\n",
+    "* Create your first Experiment and optimize your model metric with SigOpt\n",
     "* Visualize Results"
    ]
   },
@@ -49,7 +49,7 @@
     "id": "GStrnIw7S_ra"
    },
    "source": [
-    "! pip install sigopt"
+    "!pip install sigopt"
    ],
    "execution_count": null,
    "outputs": []
@@ -64,11 +64,13 @@
     "\n",
     "Once you've installed SigOpt, you need to add your SigOpt API token.\n",
     "\n",
+    "If you don't have an account yet, sign up for a free account at [app.sigopt.com/signup](https://app.sigopt.com/signup).\n",
+    "\n",
     "To get your API token, visit https://app.sigopt.com/tokens/info. This page is accessible from anywhere in the app when you click on your name in the top right corner, and select \"API Tokens\".\n",
     "\n",
-    "If you don't have an account yet, sign up for a free at [app.sigopt.com/signup](https://app.sigopt.com/signup).\n",
+    "<img src=\"https://public.sigopt.com/get-started-notebooks/v1/find-api-token.gif\" width=\"900\"/>\n",
     "\n",
-    "<img src=\"https://public.sigopt.com/get-started-notebooks/v1/find-api-token.gif\" width=\"900\"/>\n"
+    "Once you have your API token, run the code cell below to authenticate, configure SigOpt and load the notebook integration.\n"
    ]
   },
   {
@@ -77,54 +79,8 @@
     "id": "4TA9RJm4UFPu"
    },
    "source": [
-    "MY_API_TOKEN = \"YOUR_API_TOKEN_HERE\""
-   ],
-   "execution_count": null,
-   "outputs": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "NoP3Axs_7x-K"
-   },
-   "source": [
-    "Then configure your connection with SigOpt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "metadata": {
-    "id": "kByBIJOlUeti"
-   },
-   "source": [
-    "from sigopt import Connection\n",
-    "conn = Connection(client_token=MY_API_TOKEN)"
-   ],
-   "execution_count": null,
-   "outputs": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "YEEu1lImVGDD"
-   },
-   "source": [
-    "## Create Your Project\n",
-    "\n",
-    "Experiment and training runs are created within projects. The project allows you to sort and filter your experiment runs and view useful charts to gain insights into everything you've tried, including model optimization.\n",
-    "\n",
-    "Feel free to edit the name of your project below. Note that the API token is also set as an environment variable."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "metadata": {
-    "id": "uB2-tngFVOjB"
-   },
-   "source": [
-    "import os\n",
-    "os.environ['SIGOPT_API_TOKEN'] = MY_API_TOKEN\n",
-    "os.environ['SIGOPT_PROJECT'] = \"SigOpt_Optimize_XGB_Classifier\"\n",
+    "!sigopt config\n",
+    "import sigopt\n",
     "%load_ext sigopt"
    ],
    "execution_count": null,
@@ -240,7 +196,8 @@
     "The second function `run_and_track_in_sigopt` uses SigOpt methods to log and track key model information including:\n",
     "* the type of model used (`sigopt.log_model`),\n",
     "* the name of the dataset (`sigopt.log_dataset`),\n",
-    "* the hyperparameters used to build the model (`sigopt.get_parameter`),\n",
+    "* the hyperparameters used to build the model that will be tuned during the Experiment, including their default value (`sigopt.params.setdefault`),\n",
+    "* the hyperparameters used to build the model that will just be tracked, but not tuned during the Experiment (`sigopt.params.[PARAMETER_NAME]`),\n",
     "* various attributes relevant to the model (`sigopt.log_metadata`) and\n",
     "* the model output metrics (`sigopt.log_metric`)."
    ]
@@ -263,10 +220,15 @@
     "    sigopt.log_metadata(key=\"Execution Environment\", value=\"Colab Notebook\")\n",
     "    sigopt.log_model(MODEL_NAME)\n",
     "\n",
-    "    args = dict(X=features, y=labels,\n",
-    "                max_depth = sigopt.get_parameter(\"max_depth\", default = numpy.random.randint(low=3, high=15, dtype=int)),\n",
-    "                learning_rate = sigopt.get_parameter(\"learning_rate\", default = numpy.random.random(size=1)[0]),\n",
-    "                min_split_loss = sigopt.get_parameter(\"min_split_loss\", default = numpy.random.random(size=1)[0]*10))\n",
+    "    sigopt.params.setdefault(\"max_depth\", numpy.random.randint(low=3, high=15, dtype=int))\n",
+    "    sigopt.params.setdefault(\"learning_rate\", numpy.random.random(size=1)[0])\n",
+    "    sigopt.params.setdefault(\"min_split_loss\", numpy.random.random(size=1)[0]*10)\n",
+    "\n",
+    "    args = dict(X=features,\n",
+    "                y=labels,\n",
+    "                max_depth=sigopt.params.max_depth,\n",
+    "                learning_rate=sigopt.params.learning_rate,\n",
+    "                min_split_loss=sigopt.params.min_split_loss)\n",
     "\n",
     "    mean_accuracy, training_and_validation_time = evaluate_xgboost_model(**args)\n",
     "\n",
@@ -284,7 +246,11 @@
    "source": [
     "## Define Your Experiment Configuration\n",
     "\n",
-    "An Experiment is a set of parameters and at least one metric that you would like to maximize or minimize. With the `experiment` command below, you set your experiment configuration by giving it a name, defining accuracy as the metric to maximize, and finally setting your hyperparameter space by instructing SigOpt to explore values within set boundaries. In our case, we ask SigOpt's optimization engine to return values for max-depth within 3 and 12, a learning rate bewteen 0 and a and a min_split_loss between 0 and 10. Finally, the observation budget defines how many time we'll train our model. In this case, we will run 20 training runs."
+    "A SigOpt Experiment is an automated search of your model's hyperparameter space. A SigOpt Experiment works as follows:\n",
+    "\n",
+    "<img src=\"https://static.sigopt.com/b/d4ed0c2c4741dfb05b18877368ba2732ac6f26fd/static/img/landing/homepage_graph1.svg\" width=\"900\"/>\n",
+    "\n",
+    "With the `experiment` command below, you set your Experiment configuration by giving it a name, defining accuracy as the metric to maximize, and finally setting your hyperparameter space by instructing SigOpt to explore values within set boundaries. In our case, we ask SigOpt's optimization engine to return values for max-depth within 3 and 12 and a learning rate bewteen 0 and 1. Finally, the budget defines how many time we'll train our model. In this case, we will train our model 20 times, representing 20 SigOpt Runs."
    ]
   },
   {
@@ -313,14 +279,9 @@
     "            'name': 'learning_rate',\n",
     "            'type': 'double',\n",
     "            'bounds': {'min': 0.0, 'max': 1.0}\n",
-    "        },\n",
-    "        {\n",
-    "            'name': 'min_split_loss',\n",
-    "            'type': 'double',\n",
-    "            'bounds': {'min': 0.0, 'max': 10.0}\n",
     "        }\n",
     "    ],\n",
-    "    'observation_budget': 20\n",
+    "    'budget': 20\n",
     "}"
    ],
    "execution_count": null,
@@ -332,7 +293,7 @@
     "id": "gxcokWV1-7jZ"
    },
    "source": [
-    "SigOpt will conveniently output the Experiment link in the terminal so you can check your experiment was created."
+    "SigOpt will conveniently output the Experiment link in the terminal so you can check your Experiment was created."
    ]
   },
   {
@@ -342,7 +303,7 @@
    },
    "source": [
     "## Execute SigOpt Optimization\n",
-    "Let's run our optimization using the `%%optimize` magic command. SigOpt will pick up the `experiment` configuration automatically  and conveniently output links in the terminal to the surrent training run on our web application."
+    "Let's run our optimization using the `%%optimize` magic command. SigOpt will pick up the `experiment` configuration automatically  and conveniently output links in the terminal to the current Run on our web application."
    ]
   },
   {
@@ -365,19 +326,19 @@
    "source": [
     "## Visualize Results\n",
     "\n",
-    "You can click on any of the run links above and view your completed run in our web application. Here's a view of a training run page:\n",
+    "You can click on any of the Run links above and view your completed Run in our web application. Here's a view of a Run page:\n",
     "\n",
     "<img src=\"https://public.sigopt.com/get-started-notebooks/v1/view-run-page.gif\" width=\"900\"/>\n",
     "\n",
-    "The charts on the training run page show how it compares on key metrics with other runs in the same project.\n",
+    "The charts on the Run page show how it compares on key metrics with other Runs in the same project.\n",
     "\n",
-    "From the Run page, click on the Project Name at the top of the page to navigate to your project. At the project level, you can compare training runs, sort and filter through your training runs and view useful charts to gain insight into everything you've tried.\n",
+    "From the Run page, click on the Project Name at the top of the page to navigate to your project. At the project level, you can compare Runs, sort and filter through your Runs and view useful charts to gain insight into everything you've tried.\n",
     "\n",
     "<img src=\"https://public.sigopt.com/get-started-notebooks/v1/sort-runs-in-project.gif\" width=\"900\"/>\n",
     "\n",
-    "From the Project page, click on the Experiments tab, and click on the experiment you just created. The experiment Summary page features the experiment best value and shows experiment improvement in a grapth that plots the best observed model metric throughout the course of your experiment.\n",
+    "From the Project page, click on the Experiments tab, and click on the Experiment you just created. The Experiment Summary page features the Experiment best value and shows Experiment improvement in a grapth that plots the best recorded model metric throughout the course of your Experiment.\n",
     "\n",
-    "The experiment Analyis page features additional visualizations to help you gain insight into your optimization problem, including Paramater Importance, Parallel Coordinates, and interactive graphs that help you create 2D and 3D representation of your metric and parameter space."
+    "The Experiment Analyis page features additional visualizations to help you gain insight into your optimization problem, including Paramater Importance, Parallel Coordinates, and interactive graphs that help you create 2D and 3D representations of your metric and parameter space."
    ]
   },
   {
@@ -386,9 +347,9 @@
     "id": "Pd67ldz8vTYA"
    },
    "source": [
-    "## From Experiments To Training Runs\n",
+    "## From Experiments To Runs\n",
     "\n",
-    "In this demo we've covered the recommended way to instrument and optimize your model, and visualize your results with SigOpt. You learned that experiments are collections of runs that search through a defined parameter space for one or more metrics. Check out this ([notebook](https://colab.research.google.com/github/sigopt/sigopt-examples/blob/master/get-started/sigopt_training_run_demo.ipynb/)) for a closer look at a single training run, and see how to track one-off training runs without creating an experiment."
+    "In this demo we've covered the recommended way to instrument and optimize your model, and visualize your results with SigOpt. You learned that Experiments are collections of Runs that search through a defined parameter space for one or more metrics. Check out this ([notebook](https://colab.research.google.com/github/sigopt/sigopt-examples/blob/master/get-started/sigopt_training_run_demo.ipynb/)) for a closer look at a single Run, and see how to track one-off Runs without creating an Experiment."
    ]
   }
  ]
