--- a/get-started/sigopt_experiment_and_optimization_demo.ipynb
+++ b/get-started/sigopt_experiment_and_optimization_demo.ipynb
@@ -338,7 +338,7 @@
     "\n",
     "From the Project page, click on the Experiments tab, and click on the Experiment you just created. The Experiment Summary page features the Experiment best value and shows Experiment improvement in a grapth that plots the best recorded model metric throughout the course of your Experiment.\n",
     "\n",
-    "The Experiment Analyis page features additional visualizations to help you gain insight into your optimization problem, including Paramater Importance, Parallel Coordinates, and interactive graphs that help you create 2D and 3D representations of your metric and parameter space."
+    "The Experiment Analysis page features additional visualizations to help you gain insight into your optimization problem, including Paramater Importance, Parallel Coordinates, and interactive graphs that help you create 2D and 3D representations of your metric and parameter space."
    ]
   },
   {
@@ -349,7 +349,7 @@
    "source": [
     "## From Experiments To Runs\n",
     "\n",
-    "In this demo we've covered the recommended way to instrument and optimize your model, and visualize your results with SigOpt. You learned that Experiments are collections of Runs that search through a defined parameter space for one or more metrics. Check out this ([notebook](https://colab.research.google.com/github/sigopt/sigopt-examples/blob/master/get-started/sigopt_training_run_demo.ipynb/)) for a closer look at a single Run, and see how to track one-off Runs without creating an Experiment."
+    "In this demo we've covered the recommended way to instrument and optimize your model, and visualize your results with SigOpt. You learned that Experiments are collections of Runs that search through a defined parameter space for one or more metrics. Check out this ([notebook](https://colab.research.google.com/github/sigopt/sigopt-examples/blob/master/get-started/sigopt_run_demo.ipynb/)) for a closer look at a single Run, and see how to track one-off Runs without creating an Experiment."
    ]
   }
  ]
