Allow configuring SigOpt from within notebook/Colab

--- a/get-started/sigopt_experiment_and_optimization_demo.ipynb
+++ b/get-started/sigopt_experiment_and_optimization_demo.ipynb
@@ -79,9 +79,9 @@
     "id": "4TA9RJm4UFPu"
    },
    "source": [
-    "!sigopt config\n",
     "import sigopt\n",
-    "%load_ext sigopt"
+    "%load_ext sigopt\n",
+    "%sigopt config"
    ],
    "execution_count": null,
    "outputs": []
