--- a/get-started/sigopt_runs_demo.ipynb
+++ b/get-started/sigopt_runs_demo.ipynb
@@ -79,9 +79,9 @@
     "id": "LiRlxr9NiGsZ"
    },
    "source": [
-    "!sigopt config\n",
     "import sigopt\n",
-    "%load_ext sigopt"
+    "%load_ext sigopt\n",
+    "%sigopt config"
    ],
    "execution_count": null,
    "outputs": []
