--- a/xgb-integration-py-reg/xgb-integration-py-reg.ipynb
+++ b/xgb-integration-py-reg/xgb-integration-py-reg.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "f54c1800",
+   "metadata": {},
+   "source": [
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/sigopt/sigopt-examples/blob/master/xgb-integration-py-reg/xgb-integration-py-reg.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7513c031",
    "metadata": {},
    "source": [
@@ -9,10 +17,7 @@
     "\n",
     "SigOpt's XGBoost integration does more than provide a streamlined SigOpt API for your XGBoost modeling. Read on to learn how the XGBoost integration helps find better performing models faster and simpler than ever before.\n",
     "\n",
-    "This walkthrough will provide an end-to-end example of utilizing the SigOpt XGBoost integration for a regression machine learning problem. For more information, please see our [XGBoost integration blog post announcement](https://sigopt.com/blog/live-now-new-xgboost-integration/), or the XGBoost integration [docs](https://docs.sigopt.com/xgboost/installation), including a tutorial on how to set up and start using SigOpt's XGBoost integration. We recommend that before you dive into this tutorial, [sign up](https://sigopt.com/signup) for a free SigOpt account so you can easily follow along and run the code yourself. \n",
-    "\n",
-    "\n",
-    "This blog is available as a Jupyter notebook or via Google Colab for a more interactive experience."
+    "This walkthrough will provide an end-to-end example of utilizing the SigOpt XGBoost integration for a regression machine learning problem. For more information, please see our [XGBoost integration blog post announcement](https://sigopt.com/blog/live-now-new-xgboost-integration/), or the XGBoost integration [docs](https://docs.sigopt.com/xgboost/installation), including a tutorial on how to set up and start using SigOpt's XGBoost integration. We recommend that before you dive into this tutorial, [sign up](https://sigopt.com/signup) for a free SigOpt account so you can easily follow along and run the code yourself. "
    ]
   },
   {
