--- a/xgb-integration-py-reg/xgb-integration-py-reg.ipynb
+++ b/xgb-integration-py-reg/xgb-integration-py-reg.ipynb
@@ -139,6 +139,7 @@
    "outputs": [],
    "source": [
     "#%pip install -r requirements.txt\n",
+    "%pip install opendatasets #needed for Colab or if the opendatasets package is not installed\n",
     "\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import mean_squared_error\n",
