--- a/xgb-integration-py-class/xgb-integration-py-class.ipynb
+++ b/xgb-integration-py-class/xgb-integration-py-class.ipynb
@@ -146,6 +146,7 @@
    ],
    "source": [
     "#%pip install -r requirements.txt\n",
+    "%pip install opendatasets #needed for Colab or if the opendatasets package is not installed\n",
     "\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import f1_score\n",
