log transform learning rate

--- a/get-started/sigopt_experiment_and_optimization_demo.ipynb
+++ b/get-started/sigopt_experiment_and_optimization_demo.ipynb
@@ -278,7 +278,8 @@
     "        {\n",
     "            'name': 'learning_rate',\n",
     "            'type': 'double',\n",
-    "            'bounds': {'min': 0.0, 'max': 1.0}\n",
+    "            'bounds': {'min': 0.0001, 'max': 1.0},\n",
+    "            'transformation': 'log'\n",
     "        }\n",
     "    ],\n",
     "    'budget': 20\n",
